Fixed bug in adding item Improved loading animation Fixed ItemCategory dropdown validation Fixed Item Category not showing in table

--- a/POS Web/wwwroot/css/app.css
+++ b/POS Web/wwwroot/css/app.css
@@ -3,6 +3,7 @@
     margin-left: 0.25rem !important;
 }
 
-.form-control.invalid {
-    border-color: #dc3545;
+.form-control.invalid,
+.form-select.invalid {
+    border-color: #dc3545 !important;
 }
